@startuml

title __MODEL's Class Diagram__\n

  namespace fr.foundation.modwizard {
    namespace model {
      class fr.foundation.modwizard.model.Building {
          ~ buildingModel : String
          ~ buildingPartSet : ArrayList<BuildingPartSet>
          ~ buildingType : String
          ~ dataType : String
          ~ description : String
          ~ desirabilityLayer : String
          ~ id : String
          ~ isClearTrees : boolean
          ~ isDestructible : boolean
          ~ isEditable : boolean
          ~ isHidden : boolean
          ~ isManuallyUnlocked : boolean
          ~ name : String
          ~ orderId : String
          ~ villagerRequired : ArrayList<VillagerStatusQuantityPair>
          + Building()
          + Building()
          + setBuildingModel()
          + setBuildingPartSet()
          + setBuildingType()
          + setClearTrees()
          + setDataType()
          + setDescription()
          + setDesirabilityLayer()
          + setDestructible()
          + setEditable()
          + setHidden()
          + setId()
          + setManuallyUnlocked()
          + setName()
          + setOrderId()
          + setVillagerRequired()
          + toString()
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace model {
      class fr.foundation.modwizard.model.BuildingPartSet {
          ~ buildingPartList : ArrayList<String>
          ~ dataType : String
          ~ name : String
          + BuildingPartSet()
          + toString()
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace model {
      abstract class fr.foundation.modwizard.model.Model {
          + generateCode()
          {abstract} + toString()
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace model {
      class fr.foundation.modwizard.model.Project {
          ~ modName : String
          - fbxName : String
          + Project()
          + getFbxName()
          + getModName()
          + setFbxName()
          + setModName()
          + toString()
      }
    }
  }
  

  namespace fr.foundation.modwizard {
    namespace model {
      class fr.foundation.modwizard.model.VillagerStatusQuantityPair {
          ~ DataType : String
          ~ Status : String
          ~ quantity : String
          + VillagerStatusQuantityPair()
          + toString()
      }
    }
  }
  

  fr.foundation.modwizard.model.Building -up-|> fr.foundation.modwizard.model.Model
  fr.foundation.modwizard.model.Project -up-|> fr.foundation.modwizard.model.Model


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
